extends Control

## /** ì—…ê·¸ë ˆì´ë“œ ë©”ë‰´ ìŠ¤í¬ë¦½íŠ¸
##  * NPC ëŒ€í™” í˜•íƒœë¡œ ì—…ê·¸ë ˆì´ë“œë¥¼ ì„ íƒ/êµ¬ë§¤í•˜ëŠ” UI
##  * - í•´ê¸ˆëœ ì—…ê·¸ë ˆì´ë“œë§Œ ì„ íƒ ê°€ëŠ¥ (ì ê¸´ ê±´ ë°˜íˆ¬ëª… + ğŸ”’)
##  * - ì„ íƒ ì‹œ ìƒì„¸ ì •ë³´ í‘œì‹œ, êµ¬ë§¤ ë²„íŠ¼ í™œì„±í™”
##  * - process_mode = ALWAYSë¡œ ì¼ì‹œì •ì§€ ì¤‘ì—ë„ ë™ì‘
##  *
##  * ì‚¬ìš©ë²•:
##  *   upgrade.gdì—ì„œ instantiate í›„ open_menu() í˜¸ì¶œ
##  */

# ========================================
# ì‹œê·¸ë„
# ========================================
signal upgrade_purchased(type_id: int)  # ì—…ê·¸ë ˆì´ë“œ êµ¬ë§¤ ì™„ë£Œ ì‹œ
signal menu_closed()                     # ë©”ë‰´ ë‹«í ë•Œ

# ========================================
# ë…¸ë“œ ì°¸ì¡° (upgrade_menu.tscnì—ì„œ ë¯¸ë¦¬ ë°°ì¹˜)
# ========================================
@onready var dialogue_label: Label = $Panel/VBox/DialogueLabel
@onready var info_label: Label = $Panel/VBox/InfoLabel
@onready var buy_button: Button = $Panel/VBox/ActionBox/BuyButton
@onready var close_button: Button = $Panel/VBox/ActionBox/CloseButton

# 7ê°œ ì—…ê·¸ë ˆì´ë“œ ë²„íŠ¼ (Btn0~Btn6)
@onready var buttons: Array[Button] = [
	$Panel/VBox/ButtonGrid/Btn0,
	$Panel/VBox/ButtonGrid/Btn1,
	$Panel/VBox/ButtonGrid/Btn2,
	$Panel/VBox/ButtonGrid/Btn3,
	$Panel/VBox/ButtonGrid/Btn4,
	$Panel/VBox/ButtonGrid/Btn5,
	$Panel/VBox/ButtonGrid/Btn6,
]

# ========================================
# ìƒìˆ˜
# ========================================
# ë²„íŠ¼ ë¼ë²¨ ë²ˆì—­ í‚¤ (type_id ìˆœì„œ)
const TYPE_LABEL_KEYS: Array[String] = [
	"UPGRADE DIAMOND",  # 0
	"UPGRADE SPEED",    # 1
	"UPGRADE RANDOM",   # 2
	"UPGRADE TIER",     # 3
	"UPGRADE AUTO",     # 4
	"UPGRADE KEY",      # 5
	"UPGRADE TILE",     # 6
]

# NPC ëŒ€ì‚¬ ë²ˆì—­ í‚¤ (ëœë¤)
const NPC_DIALOGUE_KEYS: Array[String] = [
	"UPGRADE NPC 1",
	"UPGRADE NPC 2",
	"UPGRADE NPC 3",
	"UPGRADE NPC 4",
	"UPGRADE NPC 5",
]

# ========================================
# ë‚´ë¶€ ë³€ìˆ˜
# ========================================
## í˜„ì¬ ì„ íƒëœ ì—…ê·¸ë ˆì´ë“œ íƒ€ì… (-1 = ë¯¸ì„ íƒ)
var selected_type: int = -1

func _ready():
	visible = false

## /** ë©”ë‰´ë¥¼ ì—´ê³  ê²Œì„ì„ ì¼ì‹œì •ì§€í•œë‹¤ */
func open_menu():
	visible = true
	selected_type = -1
	
	# ëœë¤ NPC ëŒ€ì‚¬
	var key = NPC_DIALOGUE_KEYS[randi() % NPC_DIALOGUE_KEYS.size()]
	dialogue_label.text = Globals.get_text(key)
	
	# ì •ë³´ ì´ˆê¸°í™”
	info_label.text = Globals.get_text("UPGRADE SELECT")
	buy_button.visible = false
	
	# ë²„íŠ¼ ìƒíƒœ ê°±ì‹ 
	_refresh_buttons()
	
	# ê²Œì„ ì¼ì‹œì •ì§€
	get_tree().paused = true

## /** ë©”ë‰´ë¥¼ ë‹«ê³  ê²Œì„ì„ ì¬ê°œí•œë‹¤ */
func close_menu():
	visible = false
	get_tree().paused = false
	menu_closed.emit()

# ========================================
# ì…ë ¥ ì²˜ë¦¬ (_inputìœ¼ë¡œ ì§ì ‘ ì²˜ë¦¬)
# ========================================
## /** ì¼ì‹œì •ì§€ ìƒíƒœì—ì„œë„ ë²„íŠ¼ í´ë¦­ì´ ë™ì‘í•˜ë„ë¡
##  * _gui_input ëŒ€ì‹  _input + is_hovered() ë°©ì‹ ì‚¬ìš©
##  */
func _input(event: InputEvent):
	if not visible:
		return
	
	# ë§ˆìš°ìŠ¤ í´ë¦­ ì²˜ë¦¬
	if event is InputEventMouseButton and event.button_index == MOUSE_BUTTON_LEFT and event.pressed:
		# ì—…ê·¸ë ˆì´ë“œ ë²„íŠ¼ í´ë¦­ ì²´í¬
		for i in range(buttons.size()):
			if buttons[i] and buttons[i].is_hovered():
				Globals.play_click_sound()
				_on_upgrade_button_pressed(i)
				get_viewport().set_input_as_handled()
				return
		
		# êµ¬ë§¤ ë²„íŠ¼ í´ë¦­ ì²´í¬
		if buy_button.is_hovered() and buy_button.visible and not buy_button.disabled:
			Globals.play_click_sound()
			_on_buy_pressed()
			get_viewport().set_input_as_handled()
			return
		
		# ë‹«ê¸° ë²„íŠ¼ í´ë¦­ ì²´í¬
		if close_button.is_hovered() and close_button.visible:
			Globals.play_click_sound()
			_on_close_pressed()
			get_viewport().set_input_as_handled()
			return
	
	# ESCë¡œ ë‹«ê¸°
	if event.is_action_pressed("ui_cancel"):
		close_menu()
		get_viewport().set_input_as_handled()

# ========================================
# ë²„íŠ¼ ìƒíƒœ ê°±ì‹ 
# ========================================

## /** ëª¨ë“  ì—…ê·¸ë ˆì´ë“œ ë²„íŠ¼ì˜ í…ìŠ¤íŠ¸/íˆ¬ëª…ë„ë¥¼ ê°±ì‹ í•œë‹¤ */
func _refresh_buttons():
	for i in range(buttons.size()):
		var is_unlocked = Globals.is_upgrade_unlocked(i)
		var level = _get_level(i)
		var max_level = _get_max_level(i)
		var is_max = (level >= max_level)
		var label_text = Globals.get_text(TYPE_LABEL_KEYS[i])
		
		if is_unlocked:
			if is_max:
				buttons[i].text = "%s (MAX)" % label_text
				buttons[i].modulate = Color(0.6, 0.6, 0.6)
			else:
				buttons[i].text = "%s Lv%d" % [label_text, level]
				buttons[i].modulate = Color(1, 1, 1)
		else:
			# ì ê¸´ ìƒíƒœ â€” ë°˜íˆ¬ëª… + ìë¬¼ì‡ 
			buttons[i].text = "ğŸ”’ %s" % label_text
			buttons[i].modulate = Color(1, 1, 1, 0.4)

# ========================================
# ë²„íŠ¼ í´ë¦­ í•¸ë“¤ëŸ¬
# ========================================

## /** ì—…ê·¸ë ˆì´ë“œ ë²„íŠ¼ í´ë¦­ ì‹œ
##  * @param type_id int í´ë¦­í•œ ì—…ê·¸ë ˆì´ë“œ íƒ€ì… ID (0~6)
##  */
func _on_upgrade_button_pressed(type_id: int):
	# ì ê¸´ ì—…ê·¸ë ˆì´ë“œë©´ ë©”ì‹œì§€ë§Œ í‘œì‹œ
	if not Globals.is_upgrade_unlocked(type_id):
		info_label.text = Globals.get_text("UPGRADE LOCKED")
		buy_button.visible = false
		return
	
	# ì„ íƒ ì—…ë°ì´íŠ¸
	selected_type = type_id
	_update_info_label()

## /** êµ¬ë§¤ ë²„íŠ¼ í´ë¦­ ì‹œ */
func _on_buy_pressed():
	if selected_type < 0:
		return
	
	var cost = _get_cost(selected_type)
	if cost == -1:
		info_label.text = Globals.get_text("UPGRADE MAX REACHED")
		return
	
	# ëˆ ë¶€ì¡± ì²´í¬
	if Globals.money < cost:
		info_label.text = Globals.get_text("UPGRADE NOT ENOUGH") % [cost, Globals.money]
		return
	
	# ëˆ ì°¨ê°
	Globals.money -= cost
	
	# ì—…ê·¸ë ˆì´ë“œ ì ìš©
	_apply_upgrade(selected_type)
	
	# UI ê°±ì‹ 
	_refresh_buttons()
	_update_info_label()
	
	# ë©”ë‰´ ë‹«ê¸° + ì‹œê·¸ë„ (ì¹´ë©”ë¼ ì—°ì¶œìš©)
	close_menu()
	upgrade_purchased.emit(selected_type)

## /** ë‹«ê¸° ë²„íŠ¼ í´ë¦­ ì‹œ */
func _on_close_pressed():
	close_menu()

# ========================================
# ì •ë³´ ë¼ë²¨ ê°±ì‹ 
# ========================================

## /** ì„ íƒëœ ì—…ê·¸ë ˆì´ë“œì˜ ìƒì„¸ ì •ë³´ë¥¼ í‘œì‹œí•œë‹¤ */
func _update_info_label():
	if selected_type < 0:
		info_label.text = Globals.get_text("UPGRADE SELECT")
		buy_button.visible = false
		return
	
	var level = _get_level(selected_type)
	var max_level = _get_max_level(selected_type)
	var is_max = (level >= max_level)
	var label_text = Globals.get_text(TYPE_LABEL_KEYS[selected_type])
	
	if is_max:
		info_label.text = "%s\n%s" % [label_text, Globals.get_text("UPGRADE MAX STAR")]
		buy_button.visible = false
		return
	
	var cost = _get_cost(selected_type)
	var effect = _get_effect_text(selected_type)
	var can_afford = Globals.money >= cost
	
	info_label.text = Globals.get_text("UPGRADE INFO FORMAT") % [
		label_text, level, level + 1, Globals.get_text("UPGRADE COST") % cost, effect
	]
	
	buy_button.visible = true
	buy_button.disabled = not can_afford
	buy_button.text = Globals.get_text("UPGRADE BUY AFFORD") % cost if can_afford else Globals.get_text("UPGRADE BUY CANT")

# ========================================
# í—¬í¼ í•¨ìˆ˜ (Globals ë°ì´í„° ì ‘ê·¼)
# ========================================

## /** í•´ë‹¹ íƒ€ì…ì˜ í˜„ì¬ ë ˆë²¨ì„ ë°˜í™˜í•œë‹¤
##  * @param type_id int ì—…ê·¸ë ˆì´ë“œ íƒ€ì… ID
##  * @returns int í˜„ì¬ ë ˆë²¨
##  */
func _get_level(type_id: int) -> int:
	match type_id:
		0: return Globals.diamond_value_level
		1: return Globals.pickaxe_speed_level
		2: return Globals.money_randomize_level
		3: return Globals.mining_tier_level
		4: return Globals.auto_mining_speed_level
		5: return Globals.mining_key_count_level
		6: return Globals.rock_money_level
	return 0

## /** í•´ë‹¹ íƒ€ì…ì˜ ìµœëŒ€ ë ˆë²¨ì„ ë°˜í™˜í•œë‹¤
##  * @param type_id int ì—…ê·¸ë ˆì´ë“œ íƒ€ì… ID
##  * @returns int ìµœëŒ€ ë ˆë²¨
##  */
func _get_max_level(type_id: int) -> int:
	match type_id:
		0: return Globals.diamond_value_upgrades.size()
		1: return Globals.pickaxe_speed_upgrades.size()
		2: return Globals.money_randomize_upgrades.size()
		3: return Globals.mining_tier_upgrades.size()
		4: return Globals.auto_mining_speed_upgrades.size()
		5: return Globals.mining_key_count_upgrades.size()
		6: return Globals.rock_money_upgrades.size()
	return 0

## /** í•´ë‹¹ íƒ€ì…ì˜ ë‹¤ìŒ ë ˆë²¨ ë¹„ìš©ì„ ë°˜í™˜í•œë‹¤
##  * @param type_id int ì—…ê·¸ë ˆì´ë“œ íƒ€ì… ID
##  * @returns int ë¹„ìš© (-1ì´ë©´ MAX)
##  */
func _get_cost(type_id: int) -> int:
	var level = _get_level(type_id)
	var max_level = _get_max_level(type_id)
	if level >= max_level:
		return -1
	
	match type_id:
		0: return Globals.diamond_value_upgrades[level].x
		1: return Globals.pickaxe_speed_upgrades[level].x
		2: return Globals.money_randomize_upgrades[level].x
		3: return Globals.mining_tier_upgrades[level].x
		4: return int(Globals.auto_mining_speed_upgrades[level].x)
		5: return Globals.mining_key_count_upgrades[level].x
		6: return Globals.rock_money_upgrades[level].x
	return 0

## /** í•´ë‹¹ íƒ€ì…ì˜ ë‹¤ìŒ ë ˆë²¨ íš¨ê³¼ í…ìŠ¤íŠ¸ë¥¼ ë°˜í™˜í•œë‹¤
##  * @param type_id int ì—…ê·¸ë ˆì´ë“œ íƒ€ì… ID
##  * @returns String íš¨ê³¼ ì„¤ëª…
##  */
func _get_effect_text(type_id: int) -> String:
	var level = _get_level(type_id)
	var max_level = _get_max_level(type_id)
	if level >= max_level:
		return Globals.get_text("UPGRADE MAX")
	
	match type_id:
		0:  # ë‹¤ì´ì•„ íšë“ëŸ‰
			var new_val = Globals.diamond_value_upgrades[level].y
			return Globals.get_text("UPGRADE EFFECT YIELD") % new_val
		1:  # ê³¡ê´­ì´ ì†ë„
			var new_clicks = Globals.pickaxe_speed_upgrades[level].y
			return Globals.get_text("UPGRADE EFFECT CLICKS") % new_clicks
		2:  # ëˆ ëœë¤ í™•ë¥ 
			var x2 = Globals.money_randomize_upgrades[level].y
			var x3 = Globals.money_randomize_upgrades[level].z
			return "x2: %d%%, x3: %d%%" % [x2, x3]
		3:  # ì±„êµ´ í‹°ì–´
			var new_tier = Globals.mining_tier_upgrades[level].y
			return Globals.get_text("UPGRADE EFFECT TIER") % [new_tier, new_tier]
		4:  # ìë™ ì±„êµ´ ì†ë„
			var new_interval = Globals.auto_mining_speed_upgrades[level].y
			return Globals.get_text("UPGRADE EFFECT INTERVAL") % new_interval
		5:  # ì±„êµ´ í‚¤ ê°œìˆ˜
			var new_count = Globals.mining_key_count_upgrades[level].y
			var key_names = ["F", "J", "D", "K", "S", "L"]
			var keys_str = ", ".join(key_names.slice(0, new_count))
			return Globals.get_text("UPGRADE EFFECT KEYS") % [new_count, keys_str]
		6:  # íƒ€ì¼ ë³´ë„ˆìŠ¤
			var new_bonus = Globals.rock_money_upgrades[level].y
			return Globals.get_text("UPGRADE EFFECT BONUS") % new_bonus
	return ""

## /** ì—…ê·¸ë ˆì´ë“œë¥¼ ì‹¤ì œë¡œ ì ìš©í•œë‹¤ (ë ˆë²¨ ì¦ê°€ + Globals ê°±ì‹ )
##  * @param type_id int ì—…ê·¸ë ˆì´ë“œ íƒ€ì… ID
##  */
func _apply_upgrade(type_id: int):
	match type_id:
		0:  # ë‹¤ì´ì•„ íšë“ëŸ‰
			Globals.diamond_value_level += 1
			Globals.update_diamond_value()
		1:  # ê³¡ê´­ì´ ì†ë„
			Globals.pickaxe_speed_level += 1
			Globals.update_pickaxe_speed()
		2:  # ëˆ ëœë¤ í™•ë¥ 
			Globals.money_randomize_level += 1
			Globals.update_money_randomize()
		3:  # ì±„êµ´ í‹°ì–´
			Globals.mining_tier_level += 1
			Globals.update_mining_tier()
		4:  # ìë™ ì±„êµ´ ì†ë„
			Globals.auto_mining_speed_level += 1
			Globals.update_auto_mining_speed()
		5:  # ì±„êµ´ í‚¤ ê°œìˆ˜
			Globals.mining_key_count_level += 1
			Globals.update_mining_key_count()
		6:  # íƒ€ì¼ ë³´ë„ˆìŠ¤
			Globals.rock_money_level += 1
			Globals.update_rock_money()
	
	Globals.save_settings()
